--- a/LowesApp/app/src/main/res/values/strings.xml
+++ b/LowesApp/app/src/main/res/values/strings.xml
@@ -5,10 +5,10 @@
     <string name="clear">Clear</string>
     <string name="settings">Settings</string>
     <string name="add">Add</string>
-    <string name="enter_new_item_here">Enter new item here...</string>
+    <string name="enter_new_item_here">Enter new item here</string>
 
-    <string name="pass_hint">Password...</string>
-    <string name="email_hint">Your Email...</string>
+    <string name="pass_hint">Password</string>
+    <string name="email_hint">Your Email</string>
     <string name="login_logo_desc">Logo Login Page</string>
     <string name="login_btn_text">Login to account</string>
     <string name="login_reg_btn_text">Need a new Account?</string>
@@ -17,13 +17,13 @@
     <string name="action_logout_text">Logout</string>
     <string name="reg_btn_text">Create new Account</string>
     <string name="reg_login_text">Already have an Account?</string>
-    <string name="reg_pass_text">Password...</string>
-    <string name="reg_confirm_pass_text">Confirm Password...</string>
-    <string name="setup_name_hint">Your Name...</string>
+    <string name="reg_pass_text">Password</string>
+    <string name="reg_confirm_pass_text">Confirm Password</string>
+    <string name="setup_name_hint">Your Name</string>
     <string name="setup_save_btn">Save Account Settings</string>
-    <string name="setup_name_hint_text">Your Name ...</string>
+    <string name="setup_name_hint_text">Your Name</string>
     <string name="setup_btn_name_text">Save Account Settings</string>
-    <string name="post_desc_hint">Add Description ...</string>
+    <string name="post_desc_hint">Add Description</string>
     <string name="new_post_btn_hint">Post Blog</string>
     <string name="bottom_home_text">Home</string>
     <string name="bottom_notification_text">Notification</string>
